RESOLVED FIXED187706
REGRESSION (r233502): Camera in <input type=file> becomes unresponsive after attempting to dismiss it
https://bugs.webkit.org/show_bug.cgi?id=187706
Summary REGRESSION (r233502): Camera in <input type=file> becomes unresponsive after ...
Tim Horton
Reported 2018-07-16 12:50:07 PDT
REGRESSION (r233502): Camera in <input type=file> becomes unresponsive after attempting to dismiss it
Attachments
Patch (2.82 KB, patch)
2018-07-16 12:50 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-07-16 12:50:27 PDT
Tim Horton
Comment 2 2018-07-16 12:52:48 PDT
WebKit Commit Bot
Comment 3 2018-07-16 13:32:14 PDT
Comment on attachment 345112 [details] Patch Clearing flags on attachment: 345112 Committed r233864: <https://trac.webkit.org/changeset/233864>
WebKit Commit Bot
Comment 4 2018-07-16 13:32:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.