REGRESSION (r233502): Camera in <input type=file> becomes unresponsive after attempting to dismiss it https://bugs.webkit.org/show_bug.cgi?id=187706 <rdar://problem/42137088>

Reviewed by Wenson Hsieh.

* UIProcess/ios/forms/WKFileUploadPanel.mm:
Remove an unused member.

(-[WKFileUploadPanel _dismissDisplayAnimated:]):
Allow us to dismiss the camera view controller in addition to the menu.


Canonical link: https://commits.webkit.org/202912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233864 268f45cc-cd09-0410-ab3c-d52691b4dbfc